CoinMP/src/CoinMP.h

#define SOLV_CALL_SUCCESS   0
#define SOLV_CALL_FAILED    -1
#define SOLV_METHOD_DEFAULT       0x00000000L
#define SOLV_METHOD_PRIMAL        0x00000001L
#define SOLV_METHOD_DUAL          0x00000002L
#define SOLV_METHOD_NETWORK       0x00000004L
#define SOLV_METHOD_BARRIER       0x00000008L
#define SOLV_METHOD_BENDERS       0x00000100L
#define SOLV_METHOD_DEQ           0x00000200L
#define SOLV_METHOD_EV            0x00000400L
#define SOLV_FEATURE_LP            0x00000001L
#define SOLV_FEATURE_QP            0x00000002L
#define SOLV_FEATURE_QCP           0x00000004L
#define SOLV_FEATURE_NLP           0x00000008L
#define SOLV_FEATURE_MIP           0x00000010L
#define SOLV_FEATURE_MIQP          0x00000020L
#define SOLV_FEATURE_MIQCP         0x00000040L
#define SOLV_FEATURE_MINLP         0x00000080L
#define SOLV_FEATURE_SP            0x00010000L
#define SOLV_OBJSENS_MAX   -1
#define SOLV_OBJSENS_MIN    1
#define SOLV_FILE_LOG      0
#define SOLV_FILE_BASIS    1
#define SOLV_FILE_MIPSTART 2
#define SOLV_FILE_MPS      3
#define SOLV_FILE_LP       4
#define SOLV_FILE_BINARY   5
#define SOLV_FILE_OUTPUT   6
#define SOLV_FILE_BINOUT   7
#define SOLV_FILE_IIS      8
#define SOLV_CHECK_COLCOUNT     1
#define SOLV_CHECK_ROWCOUNT     2
#define SOLV_CHECK_RANGECOUNT   3
#define SOLV_CHECK_OBJSENSE     4
#define SOLV_CHECK_ROWTYPE      5
#define SOLV_CHECK_MATBEGIN     6 
#define SOLV_CHECK_MATCOUNT     7 
#define SOLV_CHECK_MATBEGCNT    8
#define SOLV_CHECK_MATBEGNZ     9
#define SOLV_CHECK_MATINDEX    10
#define SOLV_CHECK_MATINDEXROW 11
#define SOLV_CHECK_BOUNDS      12
#define SOLV_CHECK_COLTYPE     13 
#define SOLV_CHECK_COLNAMES    14
#define SOLV_CHECK_COLNAMESLEN 15
#define SOLV_CHECK_ROWNAMES    16
#define SOLV_CHECK_ROWNAMSLEN  17
typedef void *HPROB;
typedef int (SOLVCALL * MSGLOGCALLBACK)(const char* MessageStr);
typedef int (SOLVCALL *ITERCALLBACK)(int    IterCount, 
							double ObjectValue,
							int    IsFeasible, 
							double InfeasValue);
typedef int (SOLVCALL *MIPNODECALLBACK)(int    IterCount, 
							   int	  MipNodeCount,
							   double BestBound,
							   double BestInteger,
							   int    IsMipImproved);
SOLVAPI int    SOLVCALL CoinInitSolver(const char* LicenseStr);
SOLVAPI int    SOLVCALL CoinFreeSolver(void);
SOLVAPI const char*  SOLVCALL CoinGetSolverName(void);
SOLVAPI int    SOLVCALL CoinGetSolverNameBuf(char* SolverName, int buflen);
SOLVAPI const char*  SOLVCALL CoinGetVersionStr(void);
SOLVAPI int    SOLVCALL CoinGetVersionStrBuf(char* VersionStr, int buflen);
SOLVAPI double SOLVCALL CoinGetVersion(void);
SOLVAPI int    SOLVCALL CoinGetFeatures(void);
SOLVAPI int    SOLVCALL CoinGetMethods(void);
SOLVAPI double SOLVCALL CoinGetInfinity(void);
SOLVAPI HPROB  SOLVCALL CoinCreateProblem(const char* ProblemName);
SOLVAPI int    SOLVCALL CoinLoadProblem(HPROB hProb, 
					int ColCount, int RowCount, int NZCount, int RangeCount, 
					int ObjectSense, double ObjectConst, double* ObjectCoeffs, 
					double* LowerBounds, double* UpperBounds, char* RowType, 
					double* RHSValues, double* RangeValues, int* MatrixBegin,  
					int* MatrixCount, int* MatrixIndex, double* MatrixValues,   
					char** ColNamesList, char** RowNamesList, char* objName);
SOLVAPI int    SOLVCALL CoinLoadProblemBuf(HPROB hProb, 
					int ColCount, int RowCount, int NZCount, int RangeCount, 
					int ObjectSense, double ObjectConst, double* ObjectCoeffs, 
					double* LowerBounds, double* UpperBounds, char* RowType, 
					double* RHSValues, double* RangeValues, int* MatrixBegin,  
					int* MatrixCount, int* MatrixIndex, double* MatrixValues,   
					char* ColNamesBuf, char* RowNamesBuf, char* objName);
SOLVAPI int    SOLVCALL CoinLoadInitValues(HPROB hProb, double* InitValues);
SOLVAPI int    SOLVCALL CoinLoadInteger(HPROB hProb, char* ColumnType);
SOLVAPI int    SOLVCALL CoinLoadPriority(HPROB hProb, int PriorCount, int* PriorIndex, 
										  int* PriorValues, int* PriorBranch);
SOLVAPI int    SOLVCALL CoinLoadSos(HPROB hProb, int SosCount, int SosNZCount, 
						   int* SosType, int* SosPrior, int* SosBegin,   
						   int* SosIndex, double* SosRef);
SOLVAPI int    SOLVCALL CoinLoadSemiCont(HPROB hProb, int SemiCount, int* SemiIndex);
SOLVAPI int    SOLVCALL CoinLoadQuadratic(HPROB hProb, int* QuadBegin, int* QuadCount, 
								 int* QuadIndex, double* QuadValues);
SOLVAPI int    SOLVCALL CoinLoadNonlinear(HPROB hProb, int NlpTreeCount, int NlpLineCount, 
								 int* NlpBegin, int* NlpOper, int* NlpArg1, 
								 int* NlpArg2, int* NlpIndex1, int* NlpIndex2, 
								 double* NlpValue1, double* NlpValue2);
SOLVAPI int    SOLVCALL CoinUnloadProblem(HPROB hProb);
SOLVAPI int    SOLVCALL CoinCheckProblem(HPROB hProb);
// Depreciated, use CoinLoadNamesBuf instead
//SOLVAPI int    SOLVCALL CoinSetLoadNamesType(HPROB hProb, int LoadNamesType);

SOLVAPI const char*  SOLVCALL CoinGetProblemName(HPROB hProb);
SOLVAPI int    SOLVCALL CoinGetProblemNameBuf(HPROB hProb, char* ProblemName, int buflen);
SOLVAPI int    SOLVCALL CoinGetColCount(HPROB hProb);
SOLVAPI int    SOLVCALL CoinGetRowCount(HPROB hProb);
SOLVAPI const char*  SOLVCALL CoinGetColName(HPROB hProb, int col);
SOLVAPI int    SOLVCALL CoinGetColNameBuf(HPROB hProb, int col, char* ColName, int buflen);
SOLVAPI const char*  SOLVCALL CoinGetRowName(HPROB hProb, int row);
SOLVAPI int    SOLVCALL CoinGetRowNameBuf(HPROB hProb, int row, char* RowName, int buflen);
SOLVAPI int    SOLVCALL CoinSetMsgLogCallback(HPROB hProb, MSGLOGCALLBACK MsgLogCallback);
SOLVAPI int    SOLVCALL CoinSetIterCallback(HPROB hProb, ITERCALLBACK IterCallback);
SOLVAPI int    SOLVCALL CoinSetMipNodeCallback(HPROB hProb, MIPNODECALLBACK MipNodeCallback);
SOLVAPI int    SOLVCALL CoinOptimizeProblem(HPROB hProb, int Method);
SOLVAPI int    SOLVCALL CoinGetSolutionStatus(HPROB hProb);
SOLVAPI const char*  SOLVCALL CoinGetSolutionText(HPROB hProb);
SOLVAPI int    SOLVCALL CoinGetSolutionTextBuf(HPROB hProb, char* SolutionText, int buflen);
SOLVAPI double SOLVCALL CoinGetObjectValue(HPROB hProb);
SOLVAPI double SOLVCALL CoinGetMipBestBound(HPROB hProb);
SOLVAPI int    SOLVCALL CoinGetIterCount(HPROB hProb);
SOLVAPI int    SOLVCALL CoinGetMipNodeCount(HPROB hProb);
SOLVAPI int    SOLVCALL CoinGetSolutionValues(HPROB hProb, double* Activity, double* ReducedCost, 
									 double* SlackValues, double* ShadowPrice);
int    (SOLVCALL *CoinInitSolver)(const char* LicenseStr);
int    (SOLVCALL *CoinFreeSolver)(void);
const char*  (SOLVCALL *CoinGetSolverName)(void);
int    (SOLVCALL *CoinGetSolverNameBuf)(char* SolverName, int buflen);
const char*  (SOLVCALL *CoinGetVersionStr)(void);
int    (SOLVCALL *CoinGetVersionStrBuf)(char* VersionStr, int buflen);
double (SOLVCALL *CoinGetVersion)(void);
int    (SOLVCALL *CoinGetFeatures)(void);
int    (SOLVCALL *CoinGetMethods)(void);
double (SOLVCALL *CoinGetInfinity)(void);
HPROB  (SOLVCALL *CoinCreateProblem)(const char* ProblemName);
int    (SOLVCALL *CoinLoadMatrix)(HPROB hProb, 
				int ColCount, int RowCount, int NZCount, int RangeCount, 
				int ObjectSense, double ObjectConst, double* ObjectCoeffs, 
				double* LowerBounds, double* UpperBounds, char* RowType, 
				double* RHSValues, double* RangeValues, int* MatrixBegin, 
				int* MatrixCount, int* MatrixIndex, double* MatrixValues);
int    (SOLVCALL *CoinLoadNames)(HPROB hProb, char** ColNamesList, 
				char** RowNamesList, char* ObjectName);
int    (SOLVCALL *CoinLoadNamesBuf)(HPROB hProb, char* ColNamesBuf, 
				char* RowNamesBuf, char* ObjectName);
int    (SOLVCALL *CoinLoadProblem)(HPROB hProb, 
								   int ColCount, int RowCount, int NonZeroCount, int RangeCount, 
								   int ObjectSense, double ObjectConst, double* ObjectCoeffs, 
								   double* LowerBounds, double* UpperBounds, char* RowType, 
								   double* RHSValues, double* RangeValues, int* MatrixBegin, 
								   int* MatrixCount, int* MatrixIndex, double* MatrixValues,   
								   char** ColNamesList, char** RowNamesList, char* objName);
int    (SOLVCALL *CoinLoadProblemBuf)(HPROB hProb, 
								   int ColCount, int RowCount, int NonZeroCount, int RangeCount, 
								   int ObjectSense, double ObjectConst, double* ObjectCoeffs, 
								   double* LowerBounds, double* UpperBounds, char* RowType, 
								   double* RHSValues, double* RangeValues, int* MatrixBegin, 
								   int* MatrixCount, int* MatrixIndex, double* MatrixValues,   
								   char* ColNamesBuf, char* RowNamesBuf, char* objName);
int    (SOLVCALL *CoinLoadInitValues)(HPROB hProb, double* InitValues);
int    (SOLVCALL *CoinLoadInteger)(HPROB hProb, char* ColumnType);
int    (SOLVCALL *CoinLoadPriority)(HPROB hProb, int PriorCount, int* PriorIndex, 
												int* PriorValues, int* PriorBranch);
int    (SOLVCALL *CoinLoadSos)(HPROB hProb, int SosCount, int SosNZCount, 
										 int* SosType, int* SosPrior, int* SosBegin,   
										 int* SosIndex, double* SosRef);
int    (SOLVCALL *CoinLoadSemiCont)(HPROB hProb, int SemiCount, int* SemiIndex);
int    (SOLVCALL *CoinLoadQuadratic)(HPROB hProb, int* QuadBegin, int* QuadCount, 
												 int* QuadIndex, double* QuadValues);
int    (SOLVCALL *CoinLoadNonlinear)(HPROB hProb, int NlpTreeCount, int NlpLineCount, 
												 int* NlpBegin, int* NlpOper, int* NlpArg1, 
												 int* NlpArg2, int* NlpIndex1, int* NlpIndex2, 
												 double* NlpValue1, double* NlpValue2);
int    (SOLVCALL *CoinUnloadProblem)(HPROB hProb);
int    (SOLVCALL *CoinCheckProblem)(HPROB hProb);
//int    (SOLVCALL *CoinSetLoadNamesType)(HPROB hProb, int LoadNamesType);

const char*  (SOLVCALL *CoinGetProblemName)(HPROB hProb);
int    (SOLVCALL *CoinGetProblemNameBuf)(HPROB hProb, char* ProblemName, int buflen);
int    (SOLVCALL *CoinGetColCount)(HPROB hProb);
int    (SOLVCALL *CoinGetRowCount)(HPROB hProb);
const char*  (SOLVCALL *CoinGetColName)(HPROB hProb, int col);
int    (SOLVCALL *CoinGetColNameBuf)(HPROB hProb, int col, char* ColName, int buflen);
const char*  (SOLVCALL *CoinGetRowName)(HPROB hProb, int row);
int    (SOLVCALL *CoinGetRowNameBuf)(HPROB hProb, int row, char* RowName, int buflen);
void   (SOLVCALL *CoinSetMsgLogCallback)(HPROB hProb, MSGLOGCALLBACK MsgLogCallback);
void   (SOLVCALL *CoinSetIterCallback)(HPROB hProb, ITERCALLBACK IterCallback);
void   (SOLVCALL *CoinSetMipNodeCallback)(HPROB hProb, MIPNODECALLBACK MipNodeCallback);
int    (SOLVCALL *CoinOptimizeProblem)(HPROB hProb, int Method);
int    (SOLVCALL *CoinGetSolutionStatus)(HPROB hProb);
const char* (SOLVCALL *CoinGetSolutionText)(HPROB hProb);
int    (SOLVCALL *CoinGetSolutionTextBuf)(HPROB hProb, char* SolutionText, int buflen);
double (SOLVCALL *CoinGetObjectValue)(HPROB hProb);
double (SOLVCALL *CoinGetMipBestBound)(HPROB hProb);
int    (SOLVCALL *CoinGetIterCount)(HPROB hProb);
int    (SOLVCALL *CoinGetMipNodeCount)(HPROB hProb);
int    (SOLVCALL *CoinGetSolutionValues)(HPROB hProb, double* Activity, double* ReducedCost, 
													  double* SlackValues, double* ShadowPrice);
int    (SOLVCALL *CoinGetSolutionRanges)(HPROB hProb, double* ObjLoRange, double* ObjUpRange,
										           double* RhsLoRange, double* RhsUpRange);
int    (SOLVCALL *CoinGetSolutionBasis)(HPROB hProb, int* ColStatus, int* RowStatus);
int    (SOLVCALL *CoinGetOptionCount)(HPROB hProb);
int    (SOLVCALL *CoinLocateOptionID)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinLocateOptionName)(HPROB hProb, const char* OptionName);
int	   (SOLVCALL *CoinGetOptionID)(HPROB hProb, int OptionNr);
int    (SOLVCALL *CoinGetOptionInfo)(HPROB hProb, int OptionNr, int* OptionID, int* GroupType, int* OptionType);
int    (SOLVCALL *CoinGetIntOptionMinMax)(HPROB hProb, int OptionNr, int* MinValue, int* MaxValue);
int    (SOLVCALL *CoinGetRealOptionMinMax)(HPROB hProb, int OptionNr, double* MinValue, double* MaxValue);
int    (SOLVCALL *CoinGetOptionNames)(HPROB hProb, int OptionNr, char* OptionName, char* ShortName, int buflen);
int    (SOLVCALL *CoinGetOptionGroup)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinGetOptionType)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinGetIntOptionDefaultValue)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinGetIntOptionMinValue)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinGetIntOptionMaxValue)(HPROB hProb, int OptionID);
double (SOLVCALL *CoinGetRealOptionDefaultValue)(HPROB hProb, int OptionID);
double (SOLVCALL *CoinGetRealOptionMinValue)(HPROB hProb, int OptionID);
double (SOLVCALL *CoinGetRealOptionMaxValue)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinGetOptionNameBuf)(HPROB hProb, int OptionID, char* OptionName, int buflen);
int    (SOLVCALL *CoinGetOptionShortNameBuf)(HPROB hProb, int OptionID, char* ShortName, int buflen);
int    (SOLVCALL *CoinGetOptionChanged)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinGetIntOption)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinSetIntOption)(HPROB hProb, int OptionID, int IntValue);
double (SOLVCALL *CoinGetRealOption)(HPROB hProb, int OptionID);
int    (SOLVCALL *CoinSetRealOption)(HPROB hProb, int OptionID, double RealValue);
int    (SOLVCALL *CoinGetStringOptionBuf)(HPROB hProb, int OptionID, char* StringValue, int buflen);
int    (SOLVCALL *CoinSetStringOption)(HPROB hProb, int OptionID, const char* StringValue);